added colors link

--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@
     padding: 0;
 }
 
+/* Link to colors used */
+/* https://coolors.co/0b132b-1c2541-3a506b-5bc0be-6fffe9 */
+
 
 header {
     background-color: #1C2541;
