--- a/index.css
+++ b/index.css
@@ -23,3 +23,16 @@ body {
     color: #0B132B;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+img {
+    height: auto;
+    max-width: 70%;
+    
+}
+
+#intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
