--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
 /* https://coolors.co/0b132b-1c2541-3a506b-5bc0be-6fffe9 */
 
 
+
+
 header {
     background-color: #1C2541;
     height: 30vh;
@@ -22,12 +24,29 @@ body {
     background-color: #5BC0BE;
     color: #0B132B;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1.6;
 }
 
 img {
-    height: auto;
-    max-width: 70%;
-    
+    max-width: 100%;
+    display: block;
+    margin: 0 10px;
+}
+
+.group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+
+.item {
+    flex: 1;
+    margin: 10px;
+    text-align: center;
+}
+
+.item-double {
+    flex: 2;
 }
 
 #intro {
@@ -35,4 +54,42 @@ img {
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.intro-text {
+    margin: auto;
+}
+
+.projects {
+    flex-direction: column;
+}
+
+ .project-items {
+     margin: 0 10px;
+ }
+
+/* Typography */
+
+h3 {
+    text-align: center;
+}
+
+.project-items{
+    text-align: center;
+}
+
+
+@media all and (min-width: 800px){
+    .group {
+        flex-direction: row;
+    }
+
+
+    p {
+        margin: auto;
+    }
+
+    h3 {
+        text-align: center;
+    }
 }
